testsuite/tests/checks/goto_statements/test.out
goto_statements.adb:6:7: error: goto statement
6 |       goto A;
  |       ^^^^^^^ 

